Add contact icons to list element

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             <header class="header">
                 <a id="logo"href="#">Allan K.</a>
                 <nav>
-                    <a href="#"><img src="images/logo/logo.png" alt="menu"/></a>
+                    <a href="#"><img class="menuimg" src="images/logo/menu.png" alt="menu"/></a>
                 </nav>
             </header>
-            <Main class="Welcome">
+            <Main class="welcome">
+			
                 <article>
                     <h1 class="main-title">Hey There. I’m Allan.</h1>
                     <h2 class="sub-title">I’m a software developer</h2>
@@ -24,13 +25,27 @@
                         I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
         don’t hesitate to contact me.
                     </p>
+					<img class="bg-img" src="images/background/bg_img.png" alt="bg-img"/>
+					
                 </article>
-                <article class="contact-links">
-                    <a href="https://github.com/allenkays"><img  id="profile" src="images/contact_profiles/github.svg"/></a>
-                    <a href="https://www.linkedin.com/in/allan-sang/"><img  id="profile" src="images/contact_profiles/linkedIn.svg"/></a>
-                    <a href="https://discord.com/allenkays"><img  id="profile" src="images/contact_profiles/angellist.svg"/></a>
-                    <a href="https://twitter.com/allenkays"><img  id="profile" src="images/contact_profiles/twitter.svg"/></a>
-                    <a href="https://medium.com/@allainkibet"><img  id="profile" src="images/contact_profiles/medium.svg"/></a>
+                <article>
+                    <ul class="contact-links">
+                        <li>
+                            <a href="https://github.com/allenkays"><img  id="profile" src="images/contact_profiles/github.png"/></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/allan-sang/"><img  id="profile" src="images/contact_profiles/linkedin.png"/></a>
+                        </li>
+                        <li>
+                            <a href="https://discord.com/allenkays"><img  id="profile" src="images/contact_profiles/angelist.png"/></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/allenkays"><img  id="profile" src="images/contact_profiles/twitter.png"/></a>
+                        </li>
+                        <li>
+                            <a href="https://medium.com/@allainkibet"><img  id="profile" src="images/contact_profiles/medium.png"/></a>
+                        </li>
+                    </ul>
                 </article>
             </main>
         </section>
