Update portfolio with recent work

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     </head>
     <body>
         <!--Header section-->
+        <header class="header">
+            <a id="logo"href="#">Allan K.</a>
+            <nav>
+                <a href="#"><img class="menuimg" src="images/logo/menu.png" alt="menu"/></a>
+            </nav>
+        </header>
         <section class="content">
-            <header class="header">
-                <a id="logo"href="#">Allan K.</a>
-                <nav>
-                    <a href="#"><img class="menuimg" src="images/logo/menu.png" alt="menu"/></a>
-                </nav>
-            </header>
             <Main class="welcome">
 			
                 <article>
@@ -46,6 +46,135 @@
                             <a href="https://medium.com/@allainkibet"><img  id="profile" src="images/contact_profiles/medium.png"/></a>
                         </li>
                     </ul>
+                </article>
+            </main>
+            <main class="portfolio">
+                <article class="recent-work">
+                    <h2 class="title">My Recent Works</h2>
+                    <hr class="custom-hr">
+                    <img class="custom-img" src="images/recent_works/hm_img.png" alt="placeholder img"/>
+                    <h3 class="s-title">Multi-Post Stories</h3>
+                    <p class="paragraph">
+                        A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
+                    </p>
+                    <ul class="stack">
+                        <li><img class="lang" src="images/recent_works/stack.png" alt="lang_stack"/></li>
+                    </ul>
+                    <button class="s-button" type="button">See project</button>
+                </article>
+                <article class="art-data">
+                    <img class="bg-img2" src="images/recent_works/bg-img.png" alt="background-image"/>
+                    <div class="overlay-content">
+                        <h3 class="title-post">Professional Art <br> Printing data</h3>
+                        <p class="description">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="stack-2">
+                            <li><img class="lang-2" src="images/recent_works/stack_2.png" alt="lang_stack"/></li>
+                        </ul>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-item"></div>
+                        <div class="grid-item">
+                            <button class="b-button" type="button">See project</button>
+                        </div>
+                        <div class="grid-item"></div>
+                    </div>
+                </article>
+                <article class="art-data">
+                    <img class="bg-img2" src="images/recent_works/bg-img.png" alt="background-image"/>
+                    <div class="overlay-content">
+                        <h3 class="title-post">Professional Art <br> Printing data</h3>
+                        <p class="description">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="stack-2">
+                            <li><img class="lang-2" src="images/recent_works/stack_2.png" alt="lang_stack"/></li>
+                        </ul>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-item"></div>
+                        <div class="grid-item">
+                            <button class="b-button" type="button">See project</button>
+                        </div>
+                        <div class="grid-item"></div>
+                    </div>
+                </article>
+                <article class="art-data">
+                    <img class="bg-img2" src="images/recent_works/bg-img.png" alt="background-image"/>
+                    <div class="overlay-content">
+                        <h3 class="title-post">Professional Art <br> Printing data</h3>
+                        <p class="description">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="stack-2">
+                            <li><img class="lang-2" src="images/recent_works/stack_2.png" alt="lang_stack"/></li>
+                        </ul>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-item"></div>
+                        <div class="grid-item">
+                            <button class="b-button" type="button">See project</button>
+                        </div>
+                        <div class="grid-item"></div>
+                    </div>
+                </article>
+                <article class="art-data">
+                    <img class="bg-img2" src="images/recent_works/bg-img.png" alt="background-image"/>
+                    <div class="overlay-content">
+                        <h3 class="title-post">Professional Art <br> Printing data</h3>
+                        <p class="description">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="stack-2">
+                            <li><img class="lang-2" src="images/recent_works/stack_2.png" alt="lang_stack"/></li>
+                        </ul>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-item"></div>
+                        <div class="grid-item">
+                            <button class="b-button" type="button">See project</button>
+                        </div>
+                        <div class="grid-item"></div>
+                    </div>
+                </article>
+                <article class="art-data">
+                    <img class="bg-img2" src="images/recent_works/bg-img.png" alt="background-image"/>
+                    <div class="overlay-content">
+                        <h3 class="title-post">Professional Art <br> Printing data</h3>
+                        <p class="description">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="stack-2">
+                            <li><img class="lang-2" src="images/recent_works/stack_2.png" alt="lang_stack"/></li>
+                        </ul>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-item"></div>
+                        <div class="grid-item">
+                            <button class="b-button" type="button">See project</button>
+                        </div>
+                        <div class="grid-item"></div>
+                    </div>
+                </article>
+                <article class="art-data">
+                    <img class="bg-img2" src="images/recent_works/bg-img.png" alt="background-image"/>
+                    <div class="overlay-content">
+                        <h3 class="title-post">Professional Art <br> Printing data</h3>
+                        <p class="description">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="stack-2">
+                            <li><img class="lang-2" src="images/recent_works/stack_2.png" alt="lang_stack"/></li>
+                        </ul>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-item"></div>
+                        <div class="grid-item">
+                            <button class="b-button" type="button">See project</button>
+                        </div>
+                        <div class="grid-item"></div>
+                    </div>
                 </article>
             </main>
         </section>
